@@ -1,3 +1,7 @@
+2/27/2006 Bob Rossi <bob@brasko.net>
+
+	* RELEASE_TODO: Update for .6.1
+
 2/26/2006 Bob Rossi <bob@brasko.net>
 
 	* RELEASE_TODO: Moved task to .6.2
